Fix Dockerfile: remove unavailable packages and simplify dependencies

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,20 +1,19 @@
 FROM python:3.11-slim
 
-# Установка системных зависимостей
+# Установка системных зависимостей для Playwright
 RUN apt-get update && apt-get install -y \
     wget \
     gnupg \
     ca-certificates \
     procps \
     libxss1 \
-    libgconf-2-4 \
     libxrandr2 \
     libasound2 \
     libpangocairo-1.0-0 \
     libatk1.0-0 \
     libcairo-gobject2 \
     libgtk-3-0 \
-    libgdk-pixbuf2.0-0 \
+    libgdk-pixbuf-2.0-0 \
     libxcomposite1 \
     libxcursor1 \
     libxdamage1 \
@@ -25,25 +24,39 @@ RUN apt-get update && apt-get install -y \
     libxtst6 \
     libnss3 \
     libcups2 \
-    libxss1 \
-    libgconf-2-4 \
-    libxrandr2 \
-    libasound2 \
-    libpangocairo-1.0-0 \
-    libatk1.0-0 \
-    libcairo-gobject2 \
-    libgtk-3-0 \
-    libgdk-pixbuf2.0-0 \
-    libxcomposite1 \
-    libxcursor1 \
-    libxdamage1 \
-    libxext6 \
-    libxfixes3 \
-    libxi6 \
-    libxrender1 \
-    libxtst6 \
-    libnss3 \
-    libcups2 \
+    libdrm2 \
+    libxkbcommon0 \
+    libx11-6 \
+    libx11-xcb1 \
+    libxcb1 \
+    libxcb-dri3-0 \
+    libxcb-sync1 \
+    libxcb-xfixes0 \
+    libxcb-shape0 \
+    libxcb-randr0 \
+    libxcb-render-util0 \
+    libxcb-icccm4 \
+    libxcb-image0 \
+    libxcb-keysyms1 \
+    libxcb-util1 \
+    libxcb-xinerama0 \
+    libxcb-xkb1 \
+    libxcb-xinput0 \
+    libxcb-cursor0 \
+    libxcb-shm0 \
+    libxcb-present0 \
+    libxcb-glx0 \
+    libxcb-dri2-0 \
+    libxcb-xf86dri0 \
+    libxcb-xtest0 \
+    libxcb-xv0 \
+    libxcb-xxf86vm0 \
+    libxcb-xvmc0 \
+    libxcb-res0 \
+    libxcb-record0 \
+    libxcb-screensaver0 \
+    libxcb-xprint0 \
+    libxcb-xselinux0 \
     && rm -rf /var/lib/apt/lists/*
 
 # Установка рабочей директории
@@ -51,7 +64,6 @@ WORKDIR /app
 
 # Копирование файлов зависимостей
 COPY requirements.txt .
-COPY ../requirements.txt ../requirements.txt
 
 # Установка Python зависимостей
 RUN pip install --no-cache-dir -r requirements.txt
@@ -62,8 +74,6 @@ RUN playwright install-deps chromium
 
 # Копирование исходного кода
 COPY . .
-COPY ../src ../src
-COPY ../config ../config
 
 # Создание пользователя для безопасности
 RUN useradd --create-home --shell /bin/bash app \
@@ -71,7 +81,7 @@ RUN useradd --create-home --shell /bin/bash app \
 USER app
 
 # Переменные окружения
-ENV PYTHONPATH=/app:/app/..
+ENV PYTHONPATH=/app
 ENV PLAYWRIGHT_BROWSERS_PATH=/home/app/.cache/ms-playwright
 
 # Экспорт порта
