Ultra-simple Dockerfile: let Playwright handle all dependencies

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,55 +1,11 @@
 FROM python:3.11-slim
 
-# Установка системных зависимостей для Playwright
+# Установка только базовых зависимостей
 RUN apt-get update && apt-get install -y \
     wget \
     gnupg \
     ca-certificates \
     procps \
-    libxss1 \
-    libxrandr2 \
-    libasound2 \
-    libpangocairo-1.0-0 \
-    libatk1.0-0 \
-    libcairo-gobject2 \
-    libgtk-3-0 \
-    libgdk-pixbuf-2.0-0 \
-    libxcomposite1 \
-    libxcursor1 \
-    libxdamage1 \
-    libxext6 \
-    libxfixes3 \
-    libxi6 \
-    libxrender1 \
-    libxtst6 \
-    libnss3 \
-    libcups2 \
-    libdrm2 \
-    libxkbcommon0 \
-    libx11-6 \
-    libx11-xcb1 \
-    libxcb1 \
-    libxcb-dri3-0 \
-    libxcb-sync1 \
-    libxcb-xfixes0 \
-    libxcb-shape0 \
-    libxcb-randr0 \
-    libxcb-render-util0 \
-    libxcb-icccm4 \
-    libxcb-image0 \
-    libxcb-keysyms1 \
-    libxcb-util1 \
-    libxcb-xinerama0 \
-    libxcb-xkb1 \
-    libxcb-xinput0 \
-    libxcb-cursor0 \
-    libxcb-shm0 \
-    libxcb-present0 \
-    libxcb-glx0 \
-    libxcb-dri2-0 \
-    libxcb-xf86dri0 \
-    libxcb-xtest0 \
-    libxcb-xv0 \
     && rm -rf /var/lib/apt/lists/*
 
 # Установка рабочей директории
@@ -61,7 +17,7 @@ COPY requirements.txt .
 # Установка Python зависимостей
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Установка Playwright браузеров
+# Установка Playwright браузеров и зависимостей
 RUN playwright install chromium
 RUN playwright install-deps chromium
 
