Fix Dockerfile: install packages as root, then switch to app user

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -15,6 +15,9 @@ WORKDIR /app
 # Копирование файлов зависимостей
 COPY requirements.txt .
 
+# Создание пользователя для безопасности
+RUN useradd --create-home --shell /bin/bash app
+
 # Установка Python зависимостей
 RUN pip install --no-cache-dir -r requirements.txt
 
@@ -25,9 +28,8 @@ RUN playwright install-deps chromium
 # Копирование исходного кода
 COPY . .
 
-# Создание пользователя для безопасности
-RUN useradd --create-home --shell /bin/bash app \
-    && chown -R app:app /app
+# Передача прав пользователю
+RUN chown -R app:app /app
 USER app
 
 # Переменные окружения
