Add debug info to check uvicorn installation

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -18,6 +18,10 @@ COPY requirements.txt .
 # Установка Python зависимостей
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Проверка установки uvicorn
+RUN which uvicorn || echo "uvicorn not found in PATH"
+RUN python -c "import uvicorn; print('uvicorn imported successfully')"
+
 # Установка Playwright браузеров и зависимостей
 RUN playwright install chromium
 RUN playwright install-deps chromium
