🚀 Fix Railway deployment issues
✅ Fixed Dockerfile:
- Added all Playwright system dependencies
- Proper root → app user installation sequence
- Support for Railway PORT variable
- Fixed file permissions

✅ Fixed railway.json:
- Removed conflicting startCommand
- Increased healthcheckTimeout to 300s
- Optimized restart policies

✅ Fixed API (main.py):
- Improved error handling in /health endpoint
- Added detailed startup logging
- Environment variables validation

✅ Added documentation:
- RAILWAY_DEPLOYMENT.md with step-by-step guide
- railway-env-vars.md with required environment variables
- test_railway_deployment.py for testing

Ready for Railway deployment! 🎉

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,46 +1,49 @@
 FROM python:3.11-slim
 
-# Установка только базовых зависимостей
+# Установка системных зависимостей для Playwright
 RUN apt-get update && apt-get install -y \
     wget \
     gnupg \
     ca-certificates \
     procps \
+    libnss3 \
+    libatk-bridge2.0-0 \
+    libdrm2 \
+    libxkbcommon0 \
+    libgtk-3-0 \
+    libgbm1 \
+    libasound2 \
     && rm -rf /var/lib/apt/lists/*
+
+# Создание пользователя app
+RUN useradd --create-home --shell /bin/bash app
 
 # Установка рабочей директории
 WORKDIR /app
 
-# Копирование файлов зависимостей
+# Копирование и установка зависимостей как root
 COPY requirements.txt .
-
-# Установка Python зависимостей
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Установка uvicorn отдельно
-RUN pip install uvicorn[standard]==0.24.0
-
-# Проверка установки uvicorn
-RUN which uvicorn || echo "uvicorn not found in PATH"
-RUN python -c "import uvicorn; print('uvicorn imported successfully')"
-
-# Установка Playwright браузеров и зависимостей
+# Установка Playwright и браузеров как root
 RUN playwright install chromium
 RUN playwright install-deps chromium
 
 # Копирование исходного кода
 COPY . .
 
-# Создание пользователя для безопасности (но не переключаемся на него)
-RUN useradd --create-home --shell /bin/bash app \
-    && chown -R app:app /app
+# Изменение владельца файлов
+RUN chown -R app:app /app
 
 # Переменные окружения
 ENV PYTHONPATH=/app
-ENV PLAYWRIGHT_BROWSERS_PATH=/home/app/.cache/ms-playwright
+ENV PLAYWRIGHT_BROWSERS_PATH=/ms-playwright
+
+# Переключение на пользователя app
+USER app
 
 # Экспорт порта
 EXPOSE 8000
 
-# Команда запуска
-CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Команда запуска с поддержкой переменной PORT от Railway
+CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}
