cleanup: remove all unused files and folders
- Remove old Dockerfile versions (Dockerfile.old, Dockerfile.new)
- Remove unused scripts and legacy code (scripts/, src/, config/)
- Remove old data, logs, and results folders
- Remove outdated documentation and guides
- Remove unused configuration files
- Update Dockerfile to remove references to deleted folders
- Clean up main.py imports and paths

Project is now streamlined with only essential files:
- api/ (main backend)
- frontend/ (React UI)
- supabase/ (database config)
- railway.json (deployment config)
- docker-compose.full.yml (full stack setup)

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -32,9 +32,9 @@ RUN playwright install chromium || true
 # Копирование исходного кода из папки api
 COPY api/ .
 
-# Копирование дополнительных папок проекта
-COPY src/ /app/src/
-COPY config/ /app/config/
+# Копирование дополнительных папок проекта (если нужны)
+# COPY src/ /app/src/
+# COPY config/ /app/config/
 
 # Изменение владельца файлов
 RUN chown -R app:app /app
